fixed overflow issue and link color

--- a/app/home/home.less
+++ b/app/home/home.less
@@ -5,6 +5,7 @@
 
 .section {
   font-size: 30px;
+  overflow: scroll;
   
   h4 {
     font-size: 140%;
@@ -19,7 +20,7 @@
 
   a {
     text-decoration: none;
-    color: @active_gold;
+    color: @gold;
   }
 
   .pending-text {
