--- a/app/main.css
+++ b/app/main.css
@@ -64,6 +64,7 @@ p {
 }
 .section {
   font-size: 30px;
+  overflow: scroll;
 }
 .section h4 {
   font-size: 140%;
@@ -76,7 +77,7 @@ p {
 }
 .section a {
   text-decoration: none;
-  color: #6d5800;
+  color: #bc9c00;
 }
 .section .pending-text {
   font-style: italic;
